<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2015 Barney Dennis & Gareth Lewis. -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/help_folder_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/help_folder_header"/>

        <TextView
            android:id="@+id/help_folder_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_folder_header"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:text="@string/help_folder_text"/>

        <TextView
            android:id="@+id/help_template_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_folder_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/help_template_header"/>

        <TextView
            android:id="@+id/help_template_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_template_header"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:text="@string/help_template_text"/>

        <TextView
            android:id="@+id/help_create_session_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_template_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/help_create_session_header"/>

        <TextView
            android:id="@+id/help_create_session_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_create_session_header"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:text="@string/help_create_session_text"/>

        <!--<TextView-->
            <!--android:id="@+id/help_end_session_header"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/help_create_session_text"-->
            <!--android:textSize="18sp"-->
            <!--android:textStyle="bold"-->
            <!--android:text="@string/help_folder_header"/>-->

        <!--<TextView-->
            <!--android:id="@+id/help_end_session_text"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/help_end_session_header"-->
            <!--android:layout_marginTop="2dp"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:textSize="16sp"-->
            <!--android:text="@string/help_folder_text"/>-->

        <TextView
            android:id="@+id/help_email_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_create_session_text"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/help_email_header"/>

        <TextView
            android:id="@+id/help_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/help_email_header"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="10dp"
            android:textSize="16sp"
            android:text="@string/help_email_text"/>

    </RelativeLayout>

</ScrollView>