<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2015 Barney Dennis & Gareth Lewis.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <TextView
        android:id="@+id/template_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/head_edit_template"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/template_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/sub_template"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/template_list"
        android:background="@drawable/back"
        android:layout_width="match_parent"
        android:layout_marginRight="6dp"
        android:layout_marginEnd="4dp"
        android:layout_marginLeft="6dp"
        android:layout_marginStart="4dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@null"
        android:dividerHeight="6dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/new_behaviour"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:padding="2dp"
            android:background="@drawable/button_style"
            android:src="@drawable/ic_action_new"
            android:contentDescription="@string/description_new_behaviour_button" />

        <ImageButton
            android:id="@+id/save_template"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
            android:padding="2dp"
            android:background="@drawable/button_style"
            android:src="@drawable/ic_action_save"
            android:contentDescription="@string/description_save_template_button" />

    </LinearLayout>

</LinearLayout>
